[package]
name = "envoy-request-header-mutator"
version = "1.0.0"
authors = ["Raffael Schneider  <raffael.schneider@hb-nova.ch>"]
edition = "2018"
description = "WASM module that mutates the http request header based on configuration file."
repository = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Also see more information on how to Cargo.toml specifically for WASM at 
# https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html 

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.0"
wasm-bindgen = "0.2"
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
regex = "1.5.6"
log = "0.4.17"